<resources>
    <string name="app_name">Remind Future Me</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="due_date">Due Date</string>
    <string name="date_format" translatable="false">%s/%d/%d</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="share_template">Reminder: %1$s\nDue Date: %2$s\nDescription: %3$s</string>
    <string name="confirm_deletion">Confirm the deletion</string>
    <string name="cancel">Cancel</string>
    <string name="switch_layout">Switch layout</string>
    <string name="reminder">Reminder</string>
    <string name="welcome_image">Welcome image</string>
    <string name="network_error">Unable to fetch welcome data</string>
    <string name="channel_name">Reminder</string>
    <string name="channel_description">So you don\'t forget to put a reminder.</string>
    <string name="notification_title">Reminder</string>
    <string name="notification_text">Don\'t forget to put a reminder!</string>
</resources>