<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:importantForAccessibility="no"
    tools:context=".ui.viewreminder.ViewReminderFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/titleViewReminderTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/title"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dueDateViewReminderTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/due_date"
            app:layout_constraintEnd_toEndOf="@+id/titleViewReminderTextView"
            app:layout_constraintStart_toStartOf="@+id/titleViewReminderTextView"
            app:layout_constraintTop_toBottomOf="@+id/titleViewReminderTextView" />

        <TextView
            android:id="@+id/descriptionViewReminderTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/description"
            app:layout_constraintEnd_toEndOf="@+id/dueDateViewReminderTextView"
            app:layout_constraintStart_toStartOf="@+id/dueDateViewReminderTextView"
            app:layout_constraintTop_toBottomOf="@+id/dueDateViewReminderTextView" />

        <Button
            android:id="@+id/deleteViewReminderButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/delete"
            app:layout_constraintEnd_toEndOf="@+id/descriptionViewReminderTextView"
            app:layout_constraintStart_toStartOf="@+id/descriptionViewReminderTextView"
            app:layout_constraintTop_toBottomOf="@+id/descriptionViewReminderTextView" />

        <Button
            android:id="@+id/shareViewReminderButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/share"
            app:layout_constraintEnd_toEndOf="@+id/deleteViewReminderButton"
            app:layout_constraintStart_toStartOf="@+id/deleteViewReminderButton"
            app:layout_constraintTop_toBottomOf="@+id/deleteViewReminderButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>